spacing and centering fixes

--- a/web/src/components/blog-post-preview-grid.module.css
+++ b/web/src/components/blog-post-preview-grid.module.css
@@ -34,7 +34,9 @@
 }
 
 .grid {
-  margin: 0;
+  margin: 0 auto;
+  margin-left: 0px;
+  margin-right: 0px;
   padding: 0;
   list-style: none;
   display: grid;
