--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -4,7 +4,10 @@
 .root {
   margin: 2em 0 4em;
   min-height: 500px;
-  padding-top: 100px;
+
+  @media (min-width: 550px) {
+    padding-top: 100px;
+   }
 }
 
 .headline {
@@ -33,7 +36,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  max-width: 300px;
+  max-width: 320px;
   overflow-x: scroll;
 
   /* flex-wrap: wrap ; */
@@ -51,12 +54,12 @@
 }
 
 .listing {
-  margin: auto;
+  margin: 0 auto;
 
-margin-right: 15px;
+/* margin-right: 15px; */
   @media (min-width: 400px) {
-margin-left: 15px;
-margin-right: 15px;
+/* margin-left: 15px;
+margin-right: 15px; */
   }
  
 }
